[project]
name = "pymongo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymongo==4.13.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "mypy==1.15.0",
    "ruff==0.11.11",
]
