[project]
name = "pymongo-test"
version = "0.1.1"
description = "Async PyMongo client and custom TypyingCollection class for Pydantic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv==0.9.9",
    "faker==40.4.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pymongo==4.16.0",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
    "ruff==0.15.1",
]
